--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+  html {
+    font-family: -apple-system-rounded, "Arial Rounded MT", ui-rounded, system-ui, sans-serif !important;
+  }
+}
